feature: filtro de entidades de un pensionado, fix:correcion de registro para usuario igual,refactor: lista de pensionados con sucesores